# MzLoader

./: .gitignore  CMakeLists.txt  README.md
src/: Base64.h  Decode.h  Decompress.h  Loaders.h  MzLoader.cpp
test/: Test_MzLoader.cpp  int_list.test  mz_list.test  small_raw_compressed.mzML
